my first css added

--- a/main.css
+++ b/main.css
@@ -1,5 +1,41 @@
-<head>
-  ...
-  <link rel="stylesheet" href="main.css" type="text/css">
-  <h1> color: 
-</head>
+header {
+    padding: 30px;
+    background: #322b32;
+    color: white;
+}
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+.links > li {
+    display: inline-block;
+    margin-right: 30px;
+}
+.links > li > a {
+    color: white;
+}
+main {
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+}
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.fluid-image {
+    width: 100%;
+    height: auto;
+}
+article {
+    width: 66.6%;
+    padding-right: 30px;
+}
+aside {
+    width: 33.3%;
+}
